--- a/big-market-infrastructure/pom.xml
+++ b/big-market-infrastructure/pom.xml
@@ -28,6 +28,11 @@
             <groupId>io.github.linpeilie</groupId>
             <artifactId>mapstruct-plus-spring-boot-starter</artifactId>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/cn.bugstack.middleware/db-router-spring-boot-starter -->
+        <dependency>
+            <groupId>cn.bugstack.middleware</groupId>
+            <artifactId>db-router-spring-boot-starter</artifactId>
+        </dependency>
 
         <!-- 系统模块 -->
         <dependency>
